chore(web:color): simplify test template, fix wrong background colors

--- a/packages/web/src/app/doc-pages/other-pages/color/color-token-table/color-token-table.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/color/color-token-table/color-token-table.component.scss
@@ -4,7 +4,6 @@
   gap: 16px;
   border-radius: 8px;
   border: 2px dashed var(--e-grey-40);
-  color: var(--e-grey-40);
 
   width: 100%;
   margin-top: 40px;
@@ -12,9 +11,10 @@
 }
 
 .color {
-  display: flex;
+  display: grid;
   width: 100%;
   gap: 16px;
+  grid-template-columns: 1fr 2fr 1fr;
   justify-content: space-between;
   &:not(:last-child) {
     border-bottom: 1px solid var(--e-grey-20);
@@ -25,4 +25,5 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  border: 1px solid var(--e-grey-20);
 }
